# ELENIDS

./: MANIFEST.in  README copy.md  README.md  pyproject.toml
code/: For_statistics.py  MLP_statistics.py  example.py  ids_classification_algorithm.py
src/elenids/: example.py  example_Piles.py
src/elenids.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/elenids/elenids.egg-info/: PKG-INFO  SOURCES.txt
